bk_ida/gccida/g0/function_units_used
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12005:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type attr_type; // [rsp+1Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12006:1: error: must use 'enum' tag to refer to type 'attr_pent_pair'
attr_pent_pair attr_pent_pair; // [rsp+20h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12007:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode attr_mode; // [rsp+24h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12008:1: error: must use 'enum' tag to refer to type 'attr_memory'
attr_memory attr_memory; // [rsp+28h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12009:1: error: must use 'enum' tag to refer to type 'attr_athlon_decode'
attr_athlon_decode attr_athlon_decode; // [rsp+2Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12010:1: error: must use 'enum' tag to refer to type 'attr_athlon_fpunits'
attr_athlon_fpunits attr_athlon_fpunits; // [rsp+30h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12053:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
immediate_operand( recog_data_0.operand[1], VOIDmode); 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12075:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| immediate_operand( recog_data_0.operand[1], VOIDmode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/insn-attrtab.c:12188:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& general_operand( recog_data_0.operand[0], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/function_units_used/src/obj/insn-attrtab.o] Error 1
